build(container): switch to bootBuildImage with Paketo buildpacks